--- a/Demo_LINE_OAuth2.0/packages.config
+++ b/Demo_LINE_OAuth2.0/packages.config
@@ -1,4 +1,22 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net452" />
+  <package id="Antlr" version="3.5.0.2" targetFramework="net452" />
+  <package id="AspNet.ScriptManager.bootstrap" version="4.6.0" targetFramework="net452" />
+  <package id="AspNet.ScriptManager.jQuery" version="3.6.0" targetFramework="net452" />
+  <package id="bootstrap" version="4.6.0" targetFramework="net452" />
+  <package id="jQuery" version="3.6.0" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Web.Optimization.WebForms" version="1.1.3" targetFramework="net452" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Abstractions" version="6.24.0" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.JsonWebTokens" version="6.24.0" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Logging" version="6.24.0" targetFramework="net452" />
+  <package id="Microsoft.IdentityModel.Tokens" version="6.24.0" targetFramework="net452" />
+  <package id="Microsoft.Web.Infrastructure" version="2.0.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="13.0.1" targetFramework="net452" />
+  <package id="Oracle.ManagedDataAccess" version="19.16.0" targetFramework="net452" />
+  <package id="popper.js" version="1.16.1" targetFramework="net452" />
+  <package id="System.IdentityModel.Tokens.Jwt" version="6.24.0" targetFramework="net452" />
+  <package id="System.Net.Http" version="4.3.4" targetFramework="net452" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
