新增 callback, notify_callback, default, login, logout

--- a/Demo_LINE_OAuth2.0/Demo_LINE_OAuth2.0.vbproj
+++ b/Demo_LINE_OAuth2.0/Demo_LINE_OAuth2.0.vbproj
@@ -134,12 +134,16 @@
     <Import Include="System.Web.UI.HtmlControls" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="callback.aspx" />
     <Content Include="Content\bootstrap-grid.css" />
     <Content Include="Content\bootstrap-grid.min.css" />
     <Content Include="Content\bootstrap-reboot.css" />
     <Content Include="Content\bootstrap-reboot.min.css" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="css\sticky-footer-navbar.css" />
+    <Content Include="default.aspx" />
+    <Content Include="Global.asax" />
     <Content Include="images\btn_base.png" />
     <Content Include="images\btn_hover.png" />
     <Content Include="images\btn_login_base.png" />
@@ -147,6 +151,10 @@
     <Content Include="images\btn_login_press.png" />
     <Content Include="images\btn_press.png" />
     <Content Include="images\line_32.png" />
+    <Content Include="login.aspx" />
+    <Content Include="logout.aspx" />
+    <Content Include="notify\default.aspx" />
+    <Content Include="notify_callback.aspx" />
     <Content Include="Scripts\bootstrap.bundle.js" />
     <Content Include="Scripts\bootstrap.bundle.min.js" />
     <Content Include="Scripts\bootstrap.js" />
@@ -250,6 +258,40 @@
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="App_Code\CommonUtility.vb" />
+    <Compile Include="App_Code\DBConn.vb" />
+    <Compile Include="App_Start\BundleConfig.vb" />
+    <Compile Include="callback.aspx.designer.vb">
+      <DependentUpon>callback.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="callback.aspx.vb">
+      <DependentUpon>callback.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="default.aspx.designer.vb">
+      <DependentUpon>default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="default.aspx.vb">
+      <DependentUpon>default.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="Global.asax.vb">
+      <DependentUpon>Global.asax</DependentUpon>
+    </Compile>
+    <Compile Include="login.aspx.designer.vb">
+      <DependentUpon>login.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="login.aspx.vb">
+      <DependentUpon>login.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="logout.aspx.designer.vb">
+      <DependentUpon>logout.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="logout.aspx.vb">
+      <DependentUpon>logout.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
     <Compile Include="My Project\AssemblyInfo.vb" />
     <Compile Include="My Project\Application.Designer.vb">
       <AutoGen>True</AutoGen>
@@ -268,6 +310,20 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
+    </Compile>
+    <Compile Include="notify\default.aspx.designer.vb">
+      <DependentUpon>default.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="notify\default.aspx.vb">
+      <DependentUpon>default.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
+    </Compile>
+    <Compile Include="notify_callback.aspx.designer.vb">
+      <DependentUpon>notify_callback.aspx</DependentUpon>
+    </Compile>
+    <Compile Include="notify_callback.aspx.vb">
+      <DependentUpon>notify_callback.aspx</DependentUpon>
+      <SubType>ASPXCodebehind</SubType>
     </Compile>
   </ItemGroup>
   <ItemGroup>
